// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input tests should match snapshot with default Input 1`] = `
<DocumentFragment>
  <input
    class="styles__InputStyled-sc-1i43h77-0 fULZLo"
  />
</DocumentFragment>
`;

exports[`Input tests should match snapshot with default Input with placeholder 1`] = `
<DocumentFragment>
  <input
    class="styles__InputStyled-sc-1i43h77-0 fULZLo"
    placeholder="Find an expert by specialty or name"
  />
</DocumentFragment>
`;
